# canary

./: .canary.toml.example  .env.example  .gitignore  AGENTS.md  DESIGN.md  LICENSE  README.md  demo.py  demo.sh  demo2.py  pyproject.toml  requirements.txt
.canary_home/: guard.json
canary/: __init__.py  app.py  bash_auditor.py  binary.py  checkpoint.py  claude_transcript.py  cli.py  config.py  demo_fake_claude.py  device.py  docs_topics.py  drift.py  frontend.py  guard.py  guard_shim.py  local_embeddings.py  prompt_auditor.py  prompt_firewall.py  risk.py  semantic_firewall.py  sensitive_files.py  session.py  tui.py  ui.py  usage.py  watcher.py  wrappers.py
canary/ibm/: embeddings.py  generate.py  iam.py
docs/: ARCH.md  CHANGELOG.md  MASTERPROMPT.md  PRD.md  README.md
docs/superpowers/plans/: 2025-04-20-canary-tui-redesign.md  2026-04-20-canary-tui-redesign.md
docs/superpowers/specs/: 2026-04-20-canary-tui-redesign-design.md
tests/: test_app.py  test_claude_transcript.py  test_cli_hooks.py  test_cli_shell.py  test_device.py  test_drift.py  test_firewall.py  test_frontend.py  test_guard.py  test_guard_shim.py  test_integration.py  test_risk.py  test_sensitive_files.py  test_tui.py  test_wrappers.py
tests/fixtures/: leaky_prompt.txt  safe_prompt.txt
