[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canary-tool"
version = "0.1.3"
description = "AI agent watchdog: prompt firewall + filesystem drift detection via IBM Granite."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ai", "security", "agent", "watchdog", "prompt-firewall", "drift-detection", "claude", "codex", "ibm", "granite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "requests>=2.31",
    "watchdog>=3.0",
    "python-dotenv>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
local = [
    "transformers>=4.35",
    "torch>=2.0",
    "sentencepiece>=0.1.99",
    "protobuf>=4.0",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
canary = "canary.cli:main"

[project.urls]
Homepage = "https://github.com/amalsameel/canary"
Repository = "https://github.com/amalsameel/canary"
Issues = "https://github.com/amalsameel/canary/issues"

[tool.setuptools.packages.find]
include = ["canary", "canary.*"]
exclude = ["tests", "tests.*", "build", "build.*"]
namespaces = false

[tool.setuptools.package-data]
"*" = [".canary.toml.example", ".env.example"]

[tool.pytest.ini_options]
testpaths = ["tests"]
